# cappuccino-filer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  webroot
apps/backend/: main.cc
backend/: io_engine.cc  io_engine.h  logger.h  main.cc  pref.cc  pref.h  util.h
backend/core/: logger.cc  module.h  pipeline.cc  pipeline.h  pref.cc  util.h
backend/database/: database.h
backend/portal/: portal.cc  portal.h
cmake/: FindMySQL.cmake
core/: database.cc  database.h  database_query_table.h  io_engine.cc  json.cc  json.h  launcher.cc  launcher.h  logger.cc  module.h  pipeline.cc  pipeline.h  pref.cc  pref.h  sqlprovider.cc  sqlprovider.h  uint256.cc  uint256.h  util.cc  util.h
doc/: C++Styles.txt  search-proto.txt  tag-proto.md
modules/database/: database.cc  database.h
modules/demos/: 00-stub-module.cc  01-module-api.cc  02-json-parser.cc  03-parcel-handler.cc  04-actor-basics.cc  README.md  httpreq.h
modules/mariadb/: init.cc
modules/pg/: init.cc  meta_sql_table.h  pgsqlprovider.cc  pgsqlprovider.h  tag_sql_table.h  volume_sql_table.h
modules/portal/: README.md  afhttp.cc  afhttp.hpp  afio.cc  afio.h  http_utils.cc  http_utils.h  portal.cc  server_http.hpp  server_https.hpp  test.cc
modules/search/: main.cc  search_cache.cc  search_cache.h  searcher.cc  searcher.h
modules/storage/: Makefile  dbutil.cc  dbutil.h  ddl2cpp  decl.h  entry.cc  filestat.cc  filestat.h  init.h  main.cc  readdir.cc  readdir.h  sql_files.h  sql_files.sql  storage.h  syncer.cc  syncer.h  tables.sql  tbl_files.h  tbl_volumes.h  volume.cc  volume.h
modules/storage/tools/: updatedb.cc
modules/tag/: filetag.h  filetag_actions.h  main.cc  tag.cc  tag.h  tag_actions.h
scripts/: apiecho.sh  apifstat.sh  apilocate.sh  apils.sh  apipagelocate.sh  apivolume.sh  create_nextpage_req.py  curl_post.sh  locate.json  pagelocate.json  post_request.py  pyjsoncmp.py  stub.json  tagcreate.json  tagcreate.sh  taglist.json  taglist.sh  tagname2id.json  tagname2id.sh
webdev/: README.md  angular-cli.json  package.json
webdev/e2e/: app.e2e-spec.ts  app.po.ts
webdev/src/: cappuccino.scss  index.html  styles.css
webdev/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  name-search.service.spec.ts  name-search.service.ts  search-result.ts  volume-information.ts  volume-list.service.spec.ts  volume-list.service.ts
webdev/src/app/name-search/: name-search.component.css  name-search.component.html  name-search.component.ts
webdev/src/app/volume-list/: volume-list.component.css  volume-list.component.html  volume-list.component.ts
webroot/: 500.html  README  config.html  index.html  package.json  search.html  systemjs.config.js  volconf.html
webroot.old/: .gitignore  400.html  404.html  search.html  systemjs.config.js  tsconfig.json  volconf.html
webroot.old/assets/: search.component.css
webroot.old/src/: conf-volume.ts  nav.component.ts  search.component.ts  search.result.ts  search.service.ts  volume.component.ts
webroot/assets/: search.component.css  volume.component.css
webroot/browse/: bower_components  bridges  dist  index.html  src
webroot/config/: README  index.html  package.json  systemjs.config.js
webroot/config/src/: nav.component.spec.ts  volume.component.ts  volume.service.ts
webroot/html/: search.html  volume.component.html
webroot/src/: config-main.ts  mock-volumes.ts  search-app.spec.ts  search-app.ts  search.component.ts  search.result.ts  search.service.ts  volume.component.ts
